# InsightSuite

./: .gitignore  API.md  DEPLOYMENT.md  README.md  diagnose.py  main.py  microfrontends.json  next.config.mjs  package.json  pnpm-lock.yaml  requirements.txt  run_local.py  setup.py  tailwind.config.cjs  test_routes.py  tsconfig.tsbuildinfo  vercel.json
.claude/: settings.local.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
_data/: sample_reviews.jsonl
ai_service/: __init__.py  main.py  models.py  pyproject.toml
ai_service/routers/: __init__.py  health.py  jobs.py  reviews.py
api/: index.py  requirements.txt
app/: globals.css  layout.tsx  page.tsx
components/: ClusterDetail.tsx  InsightChat.tsx  LoadingScreen.tsx  LocaleToggle.tsx  MethodologyDrawer.tsx  OpportunityMatrix.tsx  PersonaCard.tsx  RatingSummary.tsx  ReviewsTable.tsx  StatCard.tsx  ThemesTreemap.tsx  index.ts  skeletons.tsx  theme-provider.tsx
i18n/: en.json  it.json
lib/: basePath.ts  colors.ts  i18n.tsx  metrics.ts  types.ts
pipeline/: README.md  cluster.py  embed.py  personas.py  requirements.txt  run_demo.py  summarize.py  utils.py
routers/: __init__.py  health.py  jobs.py  reviews.py
store/: app.ts
styles/: globals.css
(+117 files in other folders)
